# embassy-rp-pixels

./: Cargo.toml  build.rs
src/: colors.rs  main.rs
src/task/: blink_led.rs  led_strand.rs  led_strip.rs  mod.rs  remote.rs  uart_terminal.rs
