[package]
name = "embassy-rp-pixels"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "*"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["defmt", "executor-thread", "executor-interrupt", "arch-cortex-m"] }
embassy-rp = { version = "0.9.0", features = ["rp2040", "defmt", "boot2-w25q080", "time-driver", "critical-section-impl", "intrinsics"] }
embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"
fixed = { version = "1.31.0", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["defmt"] }
smart-leds = "0.4.0"
