[package]
name = "embassy-rp-pixels"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.10", features = ["defmt", "executor-thread", "platform-cortex-m"] }
embassy-rp = { version = "0.10", features = ["rp2040", "defmt", "boot2-w25q080", "time-driver", "critical-section-impl", "intrinsics"] }
embassy-sync = "0.8.0"
embassy-time = "0.5.0"
fixed = { version = "1.31.0", features = ["defmt"] }
infrared = { version = "0.14.2", default-features = false, features = ["defmt", "embedded", "embedded-hal", "nec", "remotes"] }
panic-probe = { version = "1.0.0", features = ["defmt"] }
smart-leds = "0.4.0"
